--- a/Wikis/package.json
+++ b/Wikis/package.json
@@ -2,7 +2,7 @@
   "name": "wikis",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",  
+  "main": "index.js",
   "scripts": {
     "dev-notes:run:lan": "tiddlywiki ./dev-notes --listen host=0.0.0.0 port=9292",
     "dev-notes:run": "tiddlywiki ./dev-notes --listen port=8083",
@@ -11,5 +11,8 @@
     "portfolio:build": "tiddlywiki ./portfolio --build index"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "tiddlywiki": "^5.1.19"
+  }
 }
