--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ editions/tw5.com/tiddlers/$__StoryList.tid
 Wikis/dev-notes/tiddlers/$__StoryList.tid
 Wikis/dev-notes/tiddlers/$__StoryList.tid
 Wikis/dev-notes/tiddlers/$__StoryList.tid
+Wikis/dev-notes/tiddlers/$__StoryList.tid
