fix text to title overwrite bug 01

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Wikis/dev-notes/tiddlers/$__StoryList.tid
 Wikis/dev-notes/tiddlers/$__StoryList.tid
 Wikis/dev-notes/tiddlers/$__StoryList.tid
 Wikis/dev-notes/tiddlers/$__StoryList.tid
+Wikis/dev-notes/backlog/**
